--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jura:wght@400;700&display=swap");
+
 html,
 body {
   padding: 0;
@@ -15,7 +18,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +26,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
